2008-08-04 Quentin Mathe <qmathe@club-internet.fr>

	Finished to clean up and test basic features of COObjectContext (object 
	space/plane-like persistency to be shared by CoreObject data model and 
	COProxy). This code extracted and modularized from COProxy now works as 
	expected. COGroup persistency and advanced features like replacing an object 
	by another temporal instance in a CoreObject graph aren't implemented yet.
	WARNING: Unstable API, do not use.
	* Headers/COObject.h:
	* COObject.m:
	New ivar _objectVersion.
	(+automaticallyMakeNewInstancesPersistent, 
	+setAutomaticallyMakeNewInstancesPersistent:, 
	-objectContext, 
	-objectVersion, -_setObjectVersion:, -lastObjectVersion, -isPersistent, 
	-save, 
	-UUID, 
	-serializerDidFinish:forVersion:, -deserializerDidFinish:forVersion:): 
	New methods.
	(-serialize:using:): Modified to ignore _objectVersion.
	(-uniqueID): Deprecated.
	* Headers/COSerializer.h:
	* COSerializer.m:
	(+defaultBackendClass, +defaultCoreObjectDeltaSerializerForObject:, 
	+defaultCoreObjectFullSaveSerializerForObject:, +serializationURLForObject:,
	+serializerWithBackend:objectVersion:forURL:, +serializeObject:toURL:, 
	-version): New ETSerializer category methods.
	* Headers/CODeserializer.h:
	* CODeserializer.m:
	(+defaultCoreObjectDeserializer, +deserializerObjectWithURL:): 
	New ETDeserializer category methods.
	* Headers/COObjectContext.h:
	* COObjectContext.m:
	(-snapshotSerializerForObject:, -deltaSerializerForObject:): 
	Modified to return ready-to-use serializers set up by 
	ETSerializer(COSerializer). 
	(-lastSnapshotOfObject:forVersion:snapshotVersion:): Fixed to really 
	deserialize the last snapshot before the given version and not just the 
	last snapshot. Also modified to update the object version of the returned 
	instance.
	(-playbackInvocations:fromVersion:toVersion:): Modified to update the object 
	version of the returned instance.
	(-recordInvocation:): Modified to return the object version incremented or 